Fix homepage typo in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bobby-jiten",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zachinjapan.github.io/bobby-jiten",
+  "homepage": "https://zachinjapan.github.io/no-katakana-game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
